tests/paczka1/fuzzy1/29351865.err
Error in line 5: lTOs3sL S418 73,9
Error in line 13: luh4o S718 98,4
Error in line 30: rJgISJRAIYo A154 81,2
Error in line 25: luh4o A154 73,1
Error in line 39: S718 A154 62,2
